@@ -1,3 +1,7 @@
+2009-11-16 Bugfix of C typedef of MPL_Int64 that was failing on
+           Windows XP 64 bit, as reported by George Goussard on numpy
+           mailing list. - ADS
+
 2009-01-10 Fix bug in pan/zoom with log coordinates. - EF
 
 2009-01-06 Fix bug in setting of dashed negative contours. - EF
